Add beef stew & scrabled eggs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/roast_turkey.html">Recipe Title</a>
+    <a href="recipes/roast_turkey.html">Roast Turkey</a>
+    <a href="recipes/beef_stew.html">Beef Stew</a>
+    <a href="recipes/scramble_eggs.html">Scrambled Eggs</a>
 </body>
 </html>
