--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/roast_turkey.html">Roast Turkey</a>
-    <a href="recipes/beef_stew.html">Beef Stew</a>
+    <img src="chef.jpg" alt="Chef"> <br>
+    <a href="recipes/roast_turkey.html">Roast Turkey</a> <br>
+    <a href="recipes/beef_stew.html">Beef Stew</a> <br>
     <a href="recipes/scramble_eggs.html">Scrambled Eggs</a>
 </body>
 </html>
